updated thesis for first ETD

--- a/doc/thesis/background.tex
+++ b/doc/thesis/background.tex
@@ -85,7 +85,7 @@ to minimize the error.
 \centering
 \includegraphics[scale=.7]{images/HRF}
 \caption[Canonical Hemodynamic Response Function]
-{Canonical Hemodynamic Response Function, normalization makes $y$ units
+{Canonical Hemodynamic Response Function. Normalization makes $y$ units
 arbitrary}
 \label{fig:HRF}
 \end{figure}
@@ -321,7 +321,7 @@ the one performed in this work \cite{Hu2009}.
 \begin{figure}
 \includegraphics[width=16cm]{images/kalman2}
 \caption[Example Kalman Filter Progression]
-{a) Sigma Points are passed through the state/measurement equations
+{Example Kalman Filter Progression. a) Sigma Points are passed through the state/measurement equations
 to get a state prediction (green line). The first two moments of
 the state prediction are then used to estimate the distribution with
 a Gaussian (red line). The distribution centered at the new measurement,
@@ -369,7 +369,7 @@ $F_t$ & N(1, .09) \\
 \hline
 \end{tabular}
 \caption{Parameters used to test Gaussianity of variables after being transitioned through
-the \ac{BOLD} model}
+the \ac{BOLD} model.}
 \label{tab:steptable} 
 \end{table}
 
