--- a/doc/thesis/intro.tex
+++ b/doc/thesis/intro.tex
@@ -121,14 +121,15 @@ person, scanner and run.
 
 \begin{figure}
 \centering
-\includegraphics[width=.5\textwidth]{images/bold}
-\caption[Diagram of \ac{BOLD} Signal]{A) End of Pre-Stimulus Undershoot, $< 2s$ typical,
+\includegraphics[width=.5\textwidth]{images/bold2}
+\caption[Diagram of \ac{BOLD} Signal]{Diagram of the \ac{BOLD} Sigmal.
+A) End of Pre-Stimulus Undershoot, $< 2s$ typical,
 B) End of Stimulus, C) Input Bloodflow Drops from Supernormal to Subnormal,
 $5 s$ after B typical, D) Beginning of Post-stimulus Undershoot, $12 s$ after B
-typical, E) Full return to normal, between $20-30s$ after B. \cite{Behzadi2005}}
+typical, E) Full return to normal, between $20-30s$ after B.}
 \end{figure}
 
-\section{\ac{fMRI}}
+\section{Functional Magnetic Resonance Imaging}
 \ac{MRI}, is a method of building 3D images
 non-invasively, based on the difference between nuclear spin
 relaxation times in different molecules. The technique is
@@ -317,7 +318,7 @@ model; however, the increased complexity and lack of known priors
 make these models difficult to work with. Additional degrees of freedom 
 could also make parameter estimation intractable.
 
-\section{Properties of the \ac{BOLD} Model}
+\section{Properties of the Blood-Oxygen-Level Dependent Model}
 \label{sec:BOLD Analysis}
 Since the first complete \ac{BOLD} model was proposed by Friston et al. 
 \cite{Friston2000},  
@@ -374,7 +375,7 @@ $\tau_f  $ &  $N(2.46, .25^2)$  & $8.31 \pm 1.51 $ & $.45$ & 5.26\\
 $\epsilon$ &  $N(.54 , .1 ^2)$  & $.069 \pm .014 $ & (NC) & .89\\
 \hline
 \end{tabular}
-\caption{Parameters found in various studies. (NC) indicates that the value
+\caption[Parameters found in various studies.]{Parameters found in various studies. (NC) indicates that the value
 wasn't calculated. \cite{Vakorin2007} made use of the values from \cite{Friston2000}
 where not explicitly stated}
 \label{tab:Params} 
