--- a/doc/thesis/methods.tex
+++ b/doc/thesis/methods.tex
@@ -75,11 +75,11 @@ Signal auto-regression, Histogram of the Points}
 \subfigure[]{\label{fig:QQDDelta:B}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009d_34_43_24}}
 \subfigure[]{\label{fig:QQDDelta:C}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009d_22_38_23}}
 \subfigure[]{\label{fig:QQDDelta:D}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009d_37_29_24}}
-\caption[Resting State Noise Analysis, Steps]{Resting state noise analysis, where
+\caption[Resting state noise analysis, where signal levels are the difference between adjacent signals in \autoref{fig:QQDC}]{Resting state noise analysis, where
 signal levels are the difference between adjacent signals in \autoref{fig:QQDC}.
 From Left to Right:
 (resting state) signal, Q-Q Plot of measurements with the standard Normal,
-Signal auto-regression, Histogram of the Points}
+Signal auto-regression, Histogram of the Points.}
 \label{fig:QQDelta}
 \end{figure}
 
@@ -89,7 +89,9 @@ Signal auto-regression, Histogram of the Points}
 \subfigure[]{\label{fig:QQs:B}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009s_34_43_24}}
 \subfigure[]{\label{fig:QQs:C}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009s_22_38_23}}
 \subfigure[]{\label{fig:QQs:D}\includegraphics[trim=6cm 1cm 6cm 1cm,width=13cm]{images/noise2_0009s_37_29_24}}
-\caption[Resting State Noise Analysis, After Subtracting Spline]
+\caption[Resting State Noise Analysis, where
+signal levels are the result of subtracting a spline from the signal in 
+\autoref{fig:QQDC}]
 {Resting State Noise Analysis, where
 signal levels are the result of subtracting a spline from the signal in 
 \autoref{fig:QQDC}.
