--- a/doc/thesis/particlefilters.tex
+++ b/doc/thesis/particlefilters.tex
@@ -278,7 +278,8 @@ algorithm \autoref{alg:BasicParticleFilter}.
 \label{sec:Particle Filter Resampling}
 \begin{figure}
 \includegraphics[width=16cm]{images/particle_filter2}
-\caption[Example Particle Filter Progression]{a) Initial particle locations
+\caption[Example Particle Filter Progression.]{
+Example Particle Filter Progression. a) Initial particle locations
 uniformly distributed in [-10, 10], with
 weights set to give the State Prediction (green). When a measurement is
 received it converted to a distribution approximating uncertainty. This
