--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -37,6 +37,7 @@
 \def\chapterautorefname{Chapter}
 \def\sectionautorefname{Section}
 \def\subsectionautorefname{Section}
+\usepackage{chapterbib}
 
 \usepackage{algorithm}
 \numberwithin{algorithm}{chapter}
@@ -87,7 +88,7 @@ Daniel J. Stilwell
 
 \vfill
 
-August 30, 2010\\
+September 14, 2010\\
 Blacksburg, Virginia
 
 \vfill
@@ -239,6 +240,8 @@ List of Acronyms
 \include{discussion}
 %\include{conclusion}
 
+\clearpage
+\addcontentsline{toc}{chapter}{Bibliography}
 \bibliographystyle{plain}
 %\bibliographystyle{abbrvnat}
 %\bibliographystyle{apalike}
