--- a/doc/thesis/resultsB.tex
+++ b/doc/thesis/resultsB.tex
@@ -109,7 +109,8 @@ section yellow indicates a better fit.
 \subfigure[Coronal Slice]{\label{fig:hm_canon_pfilter_y} \includegraphics[scale=3]{images/pfilter_hm_y}}
 \subfigure[Axial Slice]{\label{fig:hm_canon_pfilter_z} \includegraphics[scale=3]{images/pfilter_hm_z}}
 \subfigure{\label{fig:scale_pfilter} \includegraphics[scale=.5]{images/scale2}}
-\caption[Particle Filter Normalized Residual Results]{Particle Filter results measured in normalized error.
+\caption[Particle Filter results measured in normalized error.]
+    {Particle Filter results measured in normalized error.
         Units of match is normalized residual where the lowest (best) levels shown are
         $0.7$ and the highest error shown (threshold) is $1$.
         Sagittal, coronal and axial slices are shwon in \autoref{fig:hm_canon_pfilter_x}.}
@@ -137,7 +138,7 @@ section yellow indicates a better fit.
 \subfigure[Coronal Slice]{\label{fig:hm_canon_mi_y} \includegraphics[scale=3]{images/mi_hm_y}}
 \subfigure[Axial Slice]{\label{fig:hm_canon_mi_z} \includegraphics[scale=3]{images/mi_hm_z}}
 \subfigure{\label{fig:scale_mi} \includegraphics[scale=.5]{images/scale4}}
-\caption[Particle Filter \acs{MI} Results]
+\caption[Particle Filter results measured in \ac{MI}.]
         {Particle Filter results measured in \ac{MI}.
          Units of match is bits (standard for base-2 \ac{MI}). The highest (best) levels are
          $0.42$ and the worst shown (threshold) is $0.1$.}
@@ -149,7 +150,8 @@ section yellow indicates a better fit.
 \centering
 \subfigure[Particle Filter]{\label{fig:comp1pfilter} \includegraphics[clip=true,trim=5cm 2.5cm 4cm 3cm,width=.93\textwidth]{images/1_pfilter_37_14_7}}
 \subfigure[SPM]{\label{fig:comp1spm} \includegraphics[clip=true,trim=5cm 2.5cm 4cm 3cm,width=.93\textwidth]{images/1_spm_37_14_7}}
-\caption[Time Series Comparison, Section 1]{Section 1, Estimated vs. Actual \ac{BOLD} response. $t$-Score: $10.71$, \ac{MI}: $0.33$, Residual: $0.72$.}
+\caption[Time Series Comparison, Section 1]{Time Series Comparison, Section 1.
+Estimated vs. Actual \ac{BOLD} response. $t$-Score: $10.71$, \ac{MI}: $0.33$, Residual: $0.72$.}
 \label{fig:comp1}
 \end{figure}
 
@@ -158,7 +160,8 @@ section yellow indicates a better fit.
 \centering
 \subfigure[Particle Filter]{\label{fig:comp2pfilter} \includegraphics[clip=true,trim=5cm 2.5cm 4cm 3cm,width=.93\textwidth]{images/2_pfilter_34_12_7}}
 \subfigure[SPM]{\label{fig:comp2spm} \includegraphics[clip=true,trim=5cm 2.5cm 4cm 3cm,width=.93\textwidth]{images/2_spm_34_12_7}}
-\caption[Time Series Comparison, Section 2]{Section 2, Estimated vs. Actual \ac{BOLD} response. $t$-Score: $6.97$, \ac{MI}: $0.04$, Residual: $1.02$.}
+\caption[Time Series Comparison, Section 2]{Time Series Comparison, Section 2.
+Estimated vs. Actual \ac{BOLD} response. $t$-Score: $6.97$, \ac{MI}: $0.04$, Residual: $1.02$.}
 \label{fig:comp2}
 \end{figure}
 
@@ -167,7 +170,8 @@ section yellow indicates a better fit.
 \centering
 \subfigure[Particle Filter]{\label{fig:comp3pfilter} \includegraphics[clip=true,trim=5cm 2.5cm 4cm 3cm,width=.93\textwidth]{images/3_pfilter_23_21_7}}
 \subfigure[SPM]{\label{fig:comp3spm} \includegraphics[clip=true,trim=5cm 2.5cm 4cm 3cm,width=.93\textwidth]{images/3_spm_23_21_7}}
-\caption[Time Series Comparison, Section 3]{Section 3, Estimated vs. Actual \ac{BOLD} response. $t$-Score: $2.85$, \ac{MI}: $-0.03$, Residual: $0.81$.}
+\caption[Time Series Comparison, Section 3]{Time Series Comparison, Section 3.
+Estimated vs. Actual \ac{BOLD} response. $t$-Score: $2.85$, \ac{MI}: $-0.03$, Residual: $0.81$.}
 \label{fig:comp3}
 \end{figure}
 
@@ -176,7 +180,8 @@ section yellow indicates a better fit.
 \centering
 \subfigure[Particle Filter]{\label{fig:comp4pfilter} \includegraphics[clip=true,trim=5cm 2.5cm 4cm 3cm,width=.93\textwidth]{images/4_pfilter_26_15_7}}
 \subfigure[SPM]{\label{fig:comp4spm} \includegraphics[clip=true,trim=5cm 2.5cm 4cm 3cm,width=.93\textwidth]{images/4_spm_26_15_7}}
-\caption[Time Series Comparison, Section 4]{Section 4, Estimated vs. Actual \ac{BOLD} response. $t$-Score: $0.50$, \ac{MI}: $0.06$, Residual: $0.95$. }
+\caption[Time Series Comparison, Section 4]{Time Series Comparison, Section 4.
+Estimated vs. Actual \ac{BOLD} response. $t$-Score: $0.50$, \ac{MI}: $0.06$, Residual: $0.95$. }
 \label{fig:comp4}
 \end{figure}
 
@@ -185,7 +190,8 @@ section yellow indicates a better fit.
 \centering
 \subfigure[Particle Filter]{\label{fig:comp5pfilter} \includegraphics[clip=true,trim=5cm 2.5cm 4cm 3cm,width=.93\textwidth]{images/5_pfilter_29_9_13}}\\
 \subfigure[SPM]{\label{fig:comp5spm} \includegraphics[clip=true,trim=5cm 2.5cm 4cm 3cm,width=.93\textwidth]{images/5_spm_29_9_13}}
-\caption[Time Series Comparison, Section 5]{Section 5, Estimated vs. Actual \ac{BOLD} Response. $t$-Score: $4.17$, \ac{MI}: $0.02$, Residual: $1.14$.}
+\caption[Time Series Comparison, Section 5]{Time Series Comparison, Section 5.
+Estimated vs. Actual \ac{BOLD} Response. $t$-Score: $4.17$, \ac{MI}: $0.02$, Residual: $1.14$.}
 %\caption{Section 5, Below threshold in both particle filter checks, but above threshold in SPM. \ac{MI} of $0.0212822$, $t$-Value
 %of $4.17399$ and $MSE$ of $1.14171$.}
 \label{fig:comp5}
@@ -196,7 +202,8 @@ section yellow indicates a better fit.
 \centering
 \subfigure[Particle Filter]{\label{fig:comp6pfilter} \includegraphics[clip=true,trim=5cm 2.5cm 4cm 3cm,width=.93\textwidth]{images/6_pfilter_36_17_19}}
 \subfigure[SPM]{\label{fig:comp6spm} \includegraphics[clip=true,trim=5cm 2.5cm 4cm 3cm,width=.93\textwidth]{images/6_spm_36_17_19}}
-\caption[Time Series Comparison, Section 6]{Section 6, Estimated vs. Actual \ac{BOLD} Response. $t$-Score: $2.49$, \ac{MI}: $.34$, Residual: $0.78$.}
+\caption[Time Series Comparison, Section 6]{Time Series Comparison, Section 6.
+Estimated vs. Actual \ac{BOLD} Response. $t$-Score: $2.49$, \ac{MI}: $.34$, Residual: $0.78$.}
 %\caption{Section 6, MI of $0.335504$, T Value: $2.49154$, normalized error: $0.783348$ Not visible in SPM}
 \label{fig:comp6}
 \end{figure}
@@ -206,7 +213,8 @@ section yellow indicates a better fit.
 \centering
 \subfigure[Particle Filter]{\label{fig:comp7pfilter} \includegraphics[clip=true,trim=5cm 2.5cm 4cm 3cm,width=.93\textwidth]{images/7_pfilter_29_26_1}}
 %\subfigure[SPM]{\label{fig:comp7spm} \includegraphics[clip=true,trim=5cm 2.5cm 4cm 3cm,width=.93\textwidth]{images/5_spm_25_34_25}}
-\caption[Time Series Comparison, Section 7]{Section 7, Estimated vs. Actual \ac{BOLD} Response. $t$-Score: $1.32$, \ac{MI}: $0.11$, Residual: $1.10$.}
+\caption[Time Series Comparison, Section 7]{Time Series Comparison, Section 7.
+Estimated vs. Actual \ac{BOLD} Response. $t$-Score: $1.32$, \ac{MI}: $0.11$, Residual: $1.10$.}
 %\caption{Section 7, $.1052$ in MI, $1.31534$ in SPM (which left this flat) and $1.09992$ normalized $\sqrt{MSE}$. Only visible in MI map. }
 \label{fig:comp7}
 \end{figure}
