fixed a bug with the bibliography linking to the wrong place

--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -240,8 +240,10 @@ List of Acronyms
 \include{discussion}
 %\include{conclusion}
 
-\clearpage
-\addcontentsline{toc}{chapter}{Bibliography}
+\cleardoublepage  
+\phantomsection  
+\addcontentsline{toc}{chapter}{Bibliography}  
+\printindex
 \bibliographystyle{plain}
 %\bibliographystyle{abbrvnat}
 %\bibliographystyle{apalike}
