--- a/README
+++ b/README
@@ -1,3 +1,12 @@
+## Master's Thesis Research Project
+This is my research project from my Master's Program at Virginia Tech, see here:
+
+ftp://bsl.ece.vt.edu/static/ReproducibleResearch/ISBI11-BOLD/BOLD-ISBI2011-preprint.pdf
+http://scholar.lib.vt.edu/theses/available/etd-09212010-215625/unrestricted/Chambers_MicahC_T_2010.pdf
+
+This is not actively being developed, it is more here for archival purposes, or in case someone wants to grab a concrete version of the BOLD model.
+
+
 ############################
 To generate a parameter map:
 ############################
